# FinalProject

./: .codio  Makefile  backup.txt  candidate.cpp  candidate.h  client  client.cpp  helper.cpp  helper.h  helper2.cpp  helper2.h  server  server-api  server-api.cpp  server.cpp  setup.sh  voter.cpp  voter.h
EC3/: backup.txt  client.cpp  helper.cpp  helper2.cpp  helper2.h  server.cpp
EC6/: Makefile  README.md  backup.txt  candidate.cpp  candidate.h  client.cpp  helper.h  helper2.cpp  helper2.h  server-api.cpp  server.cpp  voter.cpp  voter.h
Regular/: backup.txt  helper2.cpp  server-api.cpp
extracredit1/: Makefile  backup.txt  candidate.cpp  client  client.cpp  server  server.cpp
extracredit4/: client  client.cpp  helper2.cpp  index.html  server  server.cpp
extracredit6/: Makefile  client  helper2.cpp  server  server.cpp
finalEC2/: CMakeCache.txt  CMakeLists.txt  Makefile  backup.txt  candidate.cpp  candidate.h  client.cpp  client.h  cmake_install.cmake  finalec2.grpc.pb.cc  finalec2.grpc.pb.h  finalec2.pb.cc  finalec2.pb.h  finalec2.proto  helper.cpp  helper.h  server.cpp  server.h  voter.cpp  voter.h
finalEC3/: backup.txt
finalEC4/: Makefile  helper2.cpp  helper2.h  index.html  server  server.cpp  voter.cpp
